# wikidocu

./: .env_example  .gitignore  README.md  README_zh-CN.md  app_wikidocu.py  bisai.md  cli_wikidocu.py  global_vars.py  pyproject.toml  requirements.txt
.QADocs/: 2.transform_stg_tables.sql  3.create_dwd_tables.sql  4.create_dws_tables.sql  5.create_ads_report.sql  国家金融监督管理局发布“三个办法”.txt  血缘关系溯源操作说明.md
config/: global_vars.py  logging_config.py
dataset/sql/: 1.create_source_tables.sql
docs/: README.md  README_en.md  requirements.txt
docs/app_test/: app.py  app_wikidocu.py  components.py  config.py  navset_builder.py  server.py  test_app2.py
frontend/: __init__.py  components.py  config.py  navset_builder.py  navset_configs.py  podcast_config.py  server_podcast_llm.py  server_wikidocu.py  ui_podcast.py  ui_wikidocu.py  utils.py  utils_podcast.py  utils_wikidocu.py
imgs/: episode.txt
output/: episode.md  episode.txt
podcast_llm/: README.md  README2.md  __main__.py  download_prompts.py  generate.py  outline.py  podcast_outline_content_zh.md  requirements.txt  research.py  siliconcloud-tts.py  text_to_speech.py  update_prompts_for_chinese.py  writer.py
podcast_llm/config/: config.py  config.yaml  logging_config.py
podcast_llm/extractors/: audio.py  plaintext.py  utils.py  web.py
podcast_llm/local_prompts/: README.md  podcast_interviewee_role.json  (+15 more)
respone_out/: ui_detail_output.txt
src/: __init__.py  directorytreegenerator.py  filecontentextract.py  filehandler.py  func_utils.py  graph.py  models.py  prompts_zh.py  state.py
test/: test_file_research.py
(+13 files in other folders)
