[project]
name = "wikidocu"
version = "0.1.0"
description = "A documentation tool with AI capabilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.5.0",
    "markdown>=3.7",
    "pydantic>=2.10.6",
    "shiny>=1.4.0",
    "treelib>=1.8.0",
    "markitdown>=0.1.2",
    "python-dotenv>=1.0.1",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-google-genai>=2.0.9",
    "langchain-anthropic>=0.2.0",
    "tavily-python>=0.5.0",
    "PyYAML>=6.0.2",
    "gradio>=5.10.0",
    "newspaper3k>=0.2.8",
    "PyPDF2>=3.0.1",
    "python-docx>=1.1.2",
    "youtube-transcript-api>=0.6.2",
    "openai>=1.86.0,<2.0.0",
    "google-generativeai>=0.8.3",
    "anthropic>=0.39.0",
    "pydub>=0.25.1",
    "pygame>=2.5.0",
    "dashscope>=1.20.0",
    "elevenlabs>=2.10.0",
    "google-cloud-texttospeech>=2.15.0",
    "ipython>=8.0.0",
    "lxml[html_clean]>=6.0.2"
    # Note: simpleaudio has been removed due to build issues on Windows
    # If audio functionality is needed, consider using an alternative like pygame or sounddevice
]

[project.optional-dependencies]
dev = [
    "uv",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]